[gd_scene load_steps=20 format=3 uid="uid://47i34grugbr0"]

[ext_resource type="Script" path="res://scenes/objects/players/weapons/special_weapons/charge_scythe.gd" id="1_i3ve5"]
[ext_resource type="Shader" path="res://shaders/PaletteSwap.gdshader" id="2_xp3c8"]
[ext_resource type="Texture2D" uid="uid://ccwjfb5oagh7s" path="res://sprites/players/weapons/Scythe2.png" id="3_g445q"]
[ext_resource type="Texture2D" uid="uid://b0wmbfr68jjcj" path="res://sprites/players/copy_robot/weapons/BusterSmall.png" id="4_patx8"]
[ext_resource type="AudioStream" uid="uid://dcvhxvuushcu4" path="res://sounds/chargeshot.wav" id="5_r4v84"]
[ext_resource type="AudioStream" uid="uid://cs2dmn3ahpbea" path="res://sounds/pop.wav" id="6_8ph2x"]
[ext_resource type="AudioStream" uid="uid://mfk4w30lewvq" path="res://sounds/tink.wav" id="7_vi8wq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l87gb"]
shader = ExtResource("2_xp3c8")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_08ehc"]
atlas = ExtResource("3_g445q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tncmc"]
atlas = ExtResource("3_g445q")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndocp"]
atlas = ExtResource("3_g445q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_du2ib"]
atlas = ExtResource("3_g445q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17quh"]
atlas = ExtResource("3_g445q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e08mh"]
atlas = ExtResource("4_patx8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp8dl"]
atlas = ExtResource("4_patx8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj74"]
atlas = ExtResource("4_patx8")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmmfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08ehc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tncmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndocp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tncmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du2ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tncmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17quh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tncmc")
}],
"loop": true,
"name": &"Sprite_1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e08mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp8dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj74")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqwdj"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fvlc"]
size = Vector2(40, 40)

[node name="BoomerangScythe" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_i3ve5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["boomerang"]]
material = SubResource("ShaderMaterial_l87gb")
position = Vector2(-0.25, 0)
scale = Vector2(1.02381, 1)
sprite_frames = SubResource("SpriteFrames_tmmfq")
animation = &"Sprite_1"
autoplay = "Sprite_1"
frame_progress = 0.978038

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.19209e-07, 4.17233e-07)
scale = Vector2(0.8, 0.8)

[node name="PlayCheck" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Detector" type="CollisionShape2D" parent="PlayCheck"]
shape = SubResource("RectangleShape2D_kqwdj")
debug_color = Color(1, 0.00392157, 0.0705882, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0fvlc")

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_r4v84")
bus = &"SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8ph2x")
bus = &"SFX"

[node name="ReflectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_vi8wq")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="PlayCheck" to="." method="_on_play_check_body_entered"]
